# amazon-price

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  ids.txt  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
deploy/: nginx.host.conf.example  nginx.host.http.conf.example  nginx.host.https.conf.example
openspec/changes/add-amazon-price-scraper/: tasks.md
openspec/changes/add-batch-pause-controls/: design.md  proposal.md  tasks.md
openspec/changes/add-batch-pause-controls/specs/scrape-control-ux/: spec.md
openspec/changes/archive/2026-06-07-add-proxy-and-review-ux/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-add-proxy-and-review-ux/specs/price-review-ux/: spec.md
openspec/changes/archive/2026-06-07-add-proxy-and-review-ux/specs/proxy-settings/: spec.md
openspec/changes/archive/2026-06-07-harden-price-scraping/: STATUS.md  design.md  proposal.md
openspec/changes/archive/2026-06-07-harden-price-scraping/specs/price-scraping/: spec.md
openspec/changes/archive/2026-06-07-harden-sku-parsing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-harden-sku-parsing/specs/sku-parsing/: spec.md
openspec/changes/archive/2026-06-07-migrate-to-web-app/: STATUS.md  design.md  proposal.md
openspec/changes/archive/2026-06-07-migrate-to-web-app/specs/deployment/: spec.md
openspec/changes/harden-price-scraping/: tasks.md
openspec/changes/migrate-to-web-app/: tasks.md
openspec/changes/migrate-to-web-app/specs/web-api/: spec.md
openspec/changes/migrate-to-web-app/specs/web-auth/: spec.md
openspec/specs/price-review-ux/: spec.md
openspec/specs/proxy-settings/: spec.md
openspec/specs/sku-parsing/: spec.md
src/: App.css  App.tsx  Login.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: hash_password.rs
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  proxy.rs  region.rs  scraper.rs  service.rs  sku.rs  state.rs
src-tauri/src/web/: auth.rs  handlers.rs  mod.rs  routes.rs
