[package]
name = "amazon-price-scraper"
version = "0.1.0"
description = "Amazon.co.jp price scraper"
authors = ["you"]
edition = "2021"
default-run = "amazon-price-web"

[lib]
name = "amazon_price_scraper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "amazon-price-web"
path = "src/bin/web.rs"
required-features = ["web"]

[[bin]]
name = "amazon-price-scraper"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["web"]
web = ["dep:axum", "dep:tower", "dep:tower-http", "dep:argon2", "dep:async-stream", "dep:futures", "dep:tracing", "dep:tracing-subscriber", "dep:uuid"]
desktop = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "gzip", "brotli", "json", "native-tls"] }
scraper = "0.22"
tokio = { version = "1", features = ["full"] }
governor = "0.8"
anyhow = "1"
thiserror = "2"
regex = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
axum = { version = "0.8", optional = true, features = ["macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "compression-gzip", "cors", "trace", "set-header"] }
argon2 = { version = "0.5", optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
uuid = { version = "1", optional = true, features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
